# bag2_recorder

./: CMakeLists.txt  package.xml  readme.ja.md  readme.md  setup.py
bag2_recorder/: __init__.py  bag2_launcher.py  bag2_recorder.py
config/: special.config  standard.config
launch/: default.launch.py
msg/: Rosbag.msg
scripts/: bag2_recorder_py_node
