<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag2_recorder</name>
  <version>0.1.0</version>
  <description>
    This package provides programmatic control over the recording of
    rosbags in Python.
  </description>
  <maintainer email="gemini.ninth@gmail.com">GeminiNinth</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>python3-rclpy</depend>
  <depend>python3-rosbag2</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
